@@ -65,6 +65,14 @@ Changelog
 - Prevented extra leading whitespace on HIERARCH keywords from being treated
   as part of the keyword. (spacetelescope/PyFITS#6)
 
+- Fixed a bug where HIERARCH keywords containing lower-case letters was
+  mistakenly marked as invalid during header validation.
+  (spacetelescope/PyFITS#7)
+
+- Fixed an issue that was ancillary to (spacetelescope/PyFITS#7) where the
+  ``Header.index()`` method did not work correctly with HIERARCH keywords
+  containing lower-case letters.
+
 
 3.0.11 (unreleased)
 -------------------
